--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Journal App</title>
-    <script type="module" crossorigin src="/assets/index.41b80da0.js"></script>
-    <link rel="stylesheet" href="/assets/index.148a329c.css">
+    <script type="module" crossorigin src="assets/index.41b80da0.js"></script>
+    <link rel="stylesheet" href="assets/index.148a329c.css">
   </head>
   <body>
     <div id="root"></div>
